<resources>
    <string name="app_name">lukaszbednarek_midterm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submitted">Submitted</string>
    <string name="contact_us">Contact Us</string>
    <string name="address_123_hippo_way">Address: 123 Hippo Way</string>
    <string name="we_have_been_getting_many_complaints_that_one_of_our_hippos_is_indeed_a_rhino_if_you_know_which_one_it_is_please_submit_its_name_below">We have been getting many complaints that one of our hippos is indeed a rhino. If you know which one it is, please submit its name below:</string>
    <string name="phone_1_888_hippozoo">Phone: 1-888-hippozoo</string>
    <string name="enter_name">Enter name...</string>
    <string name="submit">SUBMIT</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="favorite_food">Favorite Food:</string>
    <string name="meet_the_hippos">Meet the Hippos!</string>
    <string name="full_inventory">FULL INVENTORY</string>
    <string name="contact_us_main">CONTACT US</string>
</resources>