<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView_contact_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="33dp"
        android:text="@string/submitted"
        app:layout_constraintBottom_toTopOf="@+id/editText_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_contact_help" />

    <TextView
        android:id="@+id/textView_contact_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="22dp"
        android:text="@string/contact_us"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_contact_address"
        app:layout_constraintStart_toStartOf="@+id/textView_contact_address"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_contact_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/address_123_hippo_way"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_contact_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_contact_header" />

    <TextView
        android:id="@+id/textView_contact_help"
        android:layout_width="359dp"
        android:layout_height="123dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="93dp"
        android:text="@string/we_have_been_getting_many_complaints_that_one_of_our_hippos_is_indeed_a_rhino_if_you_know_which_one_it_is_please_submit_its_name_below"
        android:textAlignment="textStart"
        android:textColor="#A34040"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_contact_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_contact_phone" />

    <TextView
        android:id="@+id/textView_contact_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="36dp"
        android:text="@string/phone_1_888_hippozoo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_contact_help"
        app:layout_constraintEnd_toEndOf="@+id/textView_contact_address"
        app:layout_constraintTop_toBottomOf="@+id/textView_contact_address" />

    <EditText
        android:id="@+id/editText_contact"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_contact_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_contact_submit" />

    <Button
        android:id="@+id/button_contact_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="99dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_contact"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>