<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/meet_the_hippos"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_main_preview_hippos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView_main_preview"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:layout="@layout/fragment_preview" />

    <Button
        android:id="@+id/button_main_full_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/full_inventory" />

    <Button
        android:id="@+id/button_main_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/contact_us_main" />

</LinearLayout>